// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EbayFilter /> rendering renders default story correctly 1`] = `
<div>
  <button
    class="filter-button filter-button--unselected"
    type="button"
  >
    <span
      class="filter-button__cell"
    >
      <span>
        Filter
      </span>
    </span>
  </button>
</div>
`;

exports[`<EbayFilter /> rendering renders with disabled attribute 1`] = `
<div>
  <button
    class="filter-button filter-button--unselected"
    disabled=""
    type="button"
  >
    <span
      class="filter-button__cell"
    >
      <span>
        text
      </span>
    </span>
  </button>
</div>
`;

exports[`<EbayFilter /> rendering renders with link 1`] = `
<div>
  <a
    class="filter-link filter-link--unselected"
    href="#link"
  >
    <span
      class="filter-link__cell"
    >
      <span>
        text
      </span>
    </span>
  </a>
</div>
`;

exports[`<EbayFilter /> rendering renders with link and disabled attribute 1`] = `
<div>
  <a
    class="filter-link filter-link--unselected"
    disabled=""
    href="#link"
  >
    <span
      class="filter-link__cell"
    >
      <span>
        text
      </span>
    </span>
  </a>
</div>
`;

exports[`<EbayFilter /> rendering renders with pressed attribute 1`] = `
<div>
  <button
    aria-pressed="true"
    class="filter-button filter-button--selected"
    type="button"
  >
    <span
      class="filter-button__cell"
    >
      <span>
        text
      </span>
    </span>
  </button>
</div>
`;

exports[`<EbayFilter /> rendering renders without pressed attribute 1`] = `
<div>
  <button
    class="filter-button filter-button--selected"
    type="button"
  >
    <span
      class="filter-button__cell"
    >
      <span>
        text
      </span>
    </span>
  </button>
</div>
`;
